--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "devDependencies": {
     "babel": "^5.3.0",
     "expect.js": "^0.3.1",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.1",
     "gulp-shell": "^0.4.1",
     "mocha": "^2.2.4"
   },
   "scripts": {
+    "build": "gulp build",
     "test": "gulp test"
   },
   "repository": {
