--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "emlapack",
   "version": "0.0.2",
   "description": "BLAS/LAPACK for JavaScript",
-  "main": "emlapack.js",
+  "main": "asmjs.js",
   "files": [
-    "emlapack.js"
+    "asmjs.js",
+    "wasm.js",
+    "emlapack.wasm"
   ],
   "devDependencies": {
     "babel": "^5.3.0",
@@ -14,6 +16,7 @@
     "mocha": "^2.2.4"
   },
   "scripts": {
+    "build": "gulp build",
     "test": "gulp test"
   },
   "repository": {
